
Fixes:
- rename setup.done to 0.X.Y-setup.done that allways after a upgrade
  the setup file with all directorys and installations is passed.


----------------------------------------------------------------------------------------------------
Date : 09.05.2010 | Release : 0.6.14    | Author  : H.Weber | CVS:253-278
----------------------------------------------------------------------------------------------------

Changes:

- Added settings for multiple timeout values that are used inside python.
  Timeout t1 : state-file default value 5 secounds 
  Timeout t2 : dvd-chapter file value 10 secounds
  Timeout t3 : bluray-chapter file value 100 secounds
- add master.sh to svn 
- add slave-dvdiso.sh to svn
- Added network menu 
- Check network container on startup if function is enabled
- On startup do check ssh and if successfull never again.
- Added ssh-server message hickup ,-) 
- Disable network functions if container is not writeable.
- Check Errorlevel after installation of software with dpkg.
- Create branch 0.6.14

Fixes:

- The bluray.progress file was not added to the filelist to kill a job
- setup.sh had a wrong entry for EULA-file 
- directory master and slave removed
- Fixed a BIG Bug.We should not check for software that is part of the bluray 
  functions if the user do not install the bluray option during the execution of 
  setup.sh
- we should allwayas send data with tcp instead of udp. 


----------------------------------------------------------------------------------------------------
Date : 09.06.2010 | Release : 0.6.15    | Author  : H.Weber | CVS:279
----------------------------------------------------------------------------------------------------


Changes:

- test $SHELL inside setup.sh prior to execute anything.
- Print path do not exist insid the logs including not writeable

Fixes:

- Until we have a Release Candidate the verbose flag will be set default to on.
- Language-ID for network windows were wrong (fixed)

 


